Fix spacing

--- a/neon/css/app.css
+++ b/neon/css/app.css
@@ -197,7 +197,7 @@ select {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 2fr;
-      grid-template-columns: 1fr 2fr;
+  grid-template-columns: 2fr 2fr;
   grid-gap: 10px;
 }
 
